--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Efficiency: Your AI-Powered Budgeting & Planning App</title>
+    <title>Gyst: Your virtual Personal Assistant</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         body {
@@ -53,7 +53,7 @@
     <script>
         function handleClick() {
             $.ajax({
-                url: "https://api.countapi.xyz/hit/chasenlz.github.io/visits",
+                url: "https://api.countapi.xyz/hit/parsapahl.github.io/visits",
                 success: function(data) {
                     console.log("Click count: " + data.value);
                 }
