--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <img src="Efficiencylogo.jpg" alt="Efficiency Logo" class="logo">
+    <img src="logo.png" alt="Efficiency Logo" class="logo">
 <body>
     <h1 class="blurb"><b>Efficiency: Your AI-Powered Budgeting & Planning App</b></h1>
     <div class="blurb">
