--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <h1 class="blurb"><b>Efficiency: Your AI-Powered Budgeting & Planning App</b></h1>
     <div class="blurb">
-        <p>Efficiency is the ultimate app to streamline your financial goals, whether it's travel, savings, or investments. Plan your dream trip to Rome in 3 months or set up a personalized savings plan, all with the help of AI.</p>
+        <p>Fill in with words</p>
         <ul>
             <li><b>Smart Saving</b>: Input your current savings and desired goals, and Efficiency will calculate weekly savings targets to reach your objectives.</li>
             <li><b>Optimal Travel Planning</b>: Our AI analyzes past flight data to predict the best time to fly, considering your preferred airlines like Lufthansa or Delta.</li>
